--- a/assets/style.css
+++ b/assets/style.css
@@ -99,12 +99,10 @@ body {
 /* changes the main header background image */
 .is-halfheight {
     background-image: url('https://images.unsplash.com/photo-1609788063095-d71bf3c1f01f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2700&q=80');
-    width: 100%;
-    height: 1000px;
-    min-height: 800px;
     background-size: cover;
     background-position: center;
-    margin-bottom: 150px;
+    margin-bottom: 56px;
+    height: 100vh;
 }
 
 .middle-tile {
